--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,5 @@
 <h1>Home Page</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
-<%= @blogs.inspect %>
+<p><%= @blogs.inspect %></p>
+<p><%= @skills.inspect %></p>
