--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -4,6 +4,11 @@
  <p><%= portfolio_item.title %></p>
  <p><%= portfolio_item.subtitle %></p>
  <p><%= portfolio_item.body %></p>
+ 
  <!--Displays image. shorhand for html img tag-->
- <%= image_tag portfolio_item.thumb_image %>
+ <!--To comment out a line-->
+ <%#= image_tag portfolio_item.thumb_image %>
+
+ <!--Display only if image is false-->
+ <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
 <% end %>
