--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -1,5 +1,7 @@
 <h1>Portfolio Items</h1>
 
+<%= link_to "Create New Item", new_portfolio_path  %>
+
 <% @portfolio_items.each do |portfolio_item| %>
  <p><%= portfolio_item.title %></p>
  <p><%= portfolio_item.subtitle %></p>
@@ -11,4 +13,5 @@
 
  <!--Display only if image is false-->
  <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
+ <%= link_to "Edit", edit_portfolio_path(portfolio_item.id) %>
 <% end %>
