--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,8 @@
 <h1>Home Page</h1>
 <p>Find me in app/views/pages/home.html.erb</p>
 
+<h1>Blog Posts</h1>
 <p><%= @blogs.inspect %></p>
+
+<h1>Skills</h1>
 <p><%= @skills.inspect %></p>
