--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -3,7 +3,7 @@
 <%= link_to "Create New Item", new_portfolio_path  %>
 
 <% @portfolio_items.each do |portfolio_item| %>
- <h3><%= link_to "#{portfolio_item.title}", portfolio_path(portfolio_item) %></h3>
+ <h3><%= link_to "#{portfolio_item.title}", portfolio_show_path(portfolio_item) %></h3>
  <p><%= portfolio_item.subtitle %></p>
  <p><%= portfolio_item.body %></p>
  
@@ -14,5 +14,5 @@
  <!--Display only if image is false-->
  <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
  <%= link_to "Edit", edit_portfolio_path(portfolio_item) %>
- <%= link_to "Delete Portfolio Item", portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
+ <%= link_to "Delete Portfolio Item", portfolio_show_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %>
 <% end %>
