Implemented nested attributes for technologies

--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -7,6 +7,10 @@
 <p><%= @portfolio_item.subtitle %></p>
 <p><%= @portfolio_item.body %></p>
 
+<h2>Technologies Used:</h2>
+<% @portfolio_item.technologies.each do |t| %>
+  <p><%= t.name %></p>
+<% end %>
 
 
 
