--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
 <h1>Home Page</h1>
+<h2>Hi, <%= current_user.last_name if current_user %></h2>
+
 <p>Find me in app/views/pages/home.html.erb</p>
 
 <h1>Blog Posts</h1>
