--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,16 +13,18 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <% if current_user %>
-      <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-    <% else %>
+    <% if current_user.is_a?(OpenStruct) %>
       <%= link_to "Login", new_user_session_path %>
       <%= link_to "Register", new_user_registration_path %>
+    <% else %>
+      <%= link_to "Log out", destroy_user_session_path, method: :delete %>
     <% end %>
-
+    
     <%= yield %>
+
     <% if session[:source] %>
       Thanks for visiting me from <%= session[:source] %>
     <% end %>
+
   </body>
 </html>
