--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,5 +1,5 @@
 <h1>Home Page</h1>
-<h2>Hi, <%= current_user.last_name if current_user %></h2>
+<h2>Hi, <%= current_user.first_name %></h2>
 
 <p>Find me in app/views/pages/home.html.erb</p>
 
