--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -25,13 +25,7 @@
     <!--Views are passed in here.-->
     <%= yield %>
 
-    <div>
-      <div><%= link_to "Home", root_path %></div>
-      <div><%= link_to "About", about_path %></div>
-      <div><%= link_to "Contact", contact_path %></div>
-      <div><%= link_to "Blogs", blogs_path %></div>
-      <div><%= link_to "Portfolios", portfolios_path %></div>
-    </div>
+    <%= render "shared/nav" %>
 
     <% if session[:source] %>
       Thanks for visiting me from <%= session[:source] %>
