--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -15,13 +15,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <div>
-      <div><%= link_to "Home", root_path %></div>
-      <div><%= link_to "About", about_path %></div>
-      <div><%= link_to "Contact", contact_path %></div>
-      <div><%= link_to "Blogs", blogs_path %></div>
-      <div><%= link_to "Portfolios", portfolios_path %></div>
-    </div>
+    <%= render "shared/nav" %>
 
     <% if current_user.is_a?(OpenStruct) %>
       <%= link_to "Login", new_user_session_path %>
