Implemented partials with local data for forms and nav bar

--- a/app/views/blogs/new.html.erb
+++ b/app/views/blogs/new.html.erb
@@ -1,5 +1,9 @@
 <h1>New Blog</h1>
 
+<!--
+  Creates a local variable: blog.
+  This is passed into the new.html.erb
+-->
 <%= render 'form', blog: @blog %>
 
 <%= link_to 'Back', blogs_path %>
