--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -25,7 +25,7 @@
     <!--Views are passed in here.-->
     <%= yield %>
 
-    <%= render "shared/nav" %>
+    <%= render "shared/nav", location: "bottom" %>
 
     <% if session[:source] %>
       Thanks for visiting me from <%= session[:source] %>
