--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -15,12 +15,7 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
 
-    <% if current_user.is_a?(OpenStruct) %>
-      <%= link_to "Login", new_user_session_path %>
-      <%= link_to "Register", new_user_registration_path %>
-    <% else %>
-      <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-    <% end %>
+    <%= login_helper %>
     
     <!--Views are passed in here.-->
     <%= yield %>
