--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -17,12 +17,7 @@
 
     <%= render "shared/nav", location: "top" %>
 
-    <% if current_user.is_a?(OpenStruct) %>
-      <%= link_to "Login", new_user_session_path %>
-      <%= link_to "Register", new_user_registration_path %>
-    <% else %>
-      <%= link_to "Log out", destroy_user_session_path, method: :delete %>
-    <% end %>
+    <%= login_helper %>
     
     <!--Views are passed in here.-->
     <%= yield %>
