--- a/app/views/layouts/blog.html.erb
+++ b/app/views/layouts/blog.html.erb
@@ -22,9 +22,7 @@
 
     <%= render "shared/nav", location: "bottom" %>
 
-    <% if session[:source] %>
-      Thanks for visiting me from <%= session[:source] %>
-    <% end %>
+    <%= source_helper("blog") %>
 
   </body>
 </html>
