--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -22,9 +22,7 @@
     <!--Views are passed in here.-->
     <%= yield %>
 
-    <% if session[:source] %>
-      Thanks for visiting me from <%= session[:source] %>
-    <% end %>
+    <%= source_helper("application") %>
 
   </body>
 </html>
