--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,8 +21,7 @@
     
     <!--Views are passed in here.-->
     <%= yield %>
-
+    <%= set_copyright %>
     <%= source_helper("application") %>
-
   </body>
 </html>
