--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card"">
   <div class="card-body">
     <div class="row">
       <div class="col-md-8">
@@ -49,7 +49,7 @@
       <div class="col-md-4">
         <h3>Cancel my account</h3>
 
-        <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %></p>
+        <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: 'btn btn-danger' %>
       </div>
     </div>
       
