--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -3,23 +3,32 @@
     <div class="card-body">
 
       <h2>Forgot your password?</h2>
+        <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
+          <%= devise_error_messages! %>
 
-      <%= form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |f| %>
-        <%= devise_error_messages! %>
+        <div class="row">
+            <div class="col-md-12">
+              <div class="form-group">
+                <%= f.label :email %><br />
+                <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+              </div>
+            </div>
 
-        <div class="form-group">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'form-control' %>
+            <div class="col-md-12">
+              <div class="form-group">
+                <%= f.submit "Send me reset password instructions", class: "btn btn-info btn-block" %>
+              </div>
+            </div>
+
+            <div class="col-md-12">
+              <p><%= link_to "Sign up", new_registration_path(resource_name), class: "btn btn-primary btn-block" %></p>
+            </div>
+
+            <div class="col-md-12">
+              <p><%= link_to "Log in", new_session_path(resource_name), class: "btn btn-dark btn-block" %></p>
+            </div>
+          <% end %>
         </div>
-
-        <div class="form-group">
-          <%= f.submit "Send me reset password instructions", class: "btn btn-dark btn-block" %>
-        </div>
-      <% end %>
-
-      <div class="auth-links">
-        <%= render "devise/shared/links" %>
-      </div>
     </div>
   </div>
 </div>
