--- a/app/views/blogs/show.html.erb
+++ b/app/views/blogs/show.html.erb
@@ -1,14 +1,5 @@
-<p id="notice"><%= notice %></p>
+<h2><%= @blog.title %></h2>
 
-<p>
-  <strong>Title:</strong>
-  <%= @blog.title %>
-</p>
+<%= link_to 'Edit', edit_blog_path(@blog) if logged_in?(:site_admin) %>
 
-<p>
-  <strong>Body:</strong>
-  <%= @blog.body %>
-</p>
-
-<%= link_to 'Edit | ', edit_blog_path(@blog) if logged_in?(:site_admin) %>
-<%= link_to 'Back', blogs_path %>
+<p><%= @blog.body %></p>
