--- a/app/views/blogs/index.html.erb
+++ b/app/views/blogs/index.html.erb
@@ -1,6 +1,5 @@
+<%= paginate @blogs %>
+
 <%= render @blogs %>
 
-<nav class="blog-pagination">
-  <a class="btn btn-outline-primary" href="#">Older</a>
-  <a class="btn btn-outline-secondary disabled" href="#">Newer</a>
-</nav>
+<%= paginate @blogs %>
