--- a/app/views/shared/_blog_sidebar.html.erb
+++ b/app/views/shared/_blog_sidebar.html.erb
@@ -1,7 +1,7 @@
 <aside class="col-md-4 blog-sidebar">
   <div class="p-3 mb-3 bg-light rounded">
     <h4 class="font-italic">About</h4>
-    <p class="mb-0">Etiam porta <em>sem malesuada magna</em> mollis euismod. Cras mattis consectetur purus sit amet fermentum. Aenean lacinia bibendum nulla sed consectetur.</p>
+    <p class="mb-0">Welcome to my personal blogs stuff.</p>
   </div>
 
   <div class="p-3">
@@ -24,10 +24,11 @@
 
   <div class="p-3">
     <h4 class="font-italic">Elsewhere</h4>
-    <ol class="list-unstyled">
-      <li><a href="#">GitHub</a></li>
-      <li><a href="#">Twitter</a></li>
-      <li><a href="#">Facebook</a></li>
+    <ol class="list-unstyled social-links">
+      <li><a href="https://github.com"><%= fa_icon "github-alt" %></a></li>
+      <li><a href="https://twitter.com"><%= fa_icon "twitter" %></a></li>
+      <li><a href="https://facebook.com"><%= fa_icon "facebook" %></a></li>
+      <li><a href="https://instagram.com"><%= fa_icon "instagram" %></a></li>
     </ol>
   </div>
 </aside>
