--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,10 +1,20 @@
-<h3><%= link_to "#{portfolio_item.title}", portfolio_show_path(portfolio_item) %></h3>
-
-<p><%= portfolio_item.subtitle %></p>
-
-<p><%= portfolio_item.body %></p>
-
-<!--Display only if image is false-->
-<%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
-<%= link_to "Edit", edit_portfolio_path(portfolio_item) if logged_in?(:site_admin) %>
-<%= link_to "Delete Portfolio Item", portfolio_path(portfolio_item) , method: :delete, data: { confirm: 'Are you sure?' } if logged_in?(:site_admin) %>
+<div class="col-md-4">
+  <div class="card mb-4 box-shadow">
+    <!--Display only if image is false-->
+    <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
+    <div class="card-body">
+      <p class="card-text">
+        <span>
+          <%= link_to portfolio_item.title, portfolio_show_path(portfolio_item) %>
+        </span> <%= portfolio_item.subtitle %>
+      </p>
+      <div class="d-flex justify-content-between align-items-center">
+        <div class="btn-group">
+          <%= link_to "Edit", edit_portfolio_path(portfolio_item), class: "btn btn-sm btn-outline-secondary" if logged_in?(:site_admin) %>
+          <%= link_to "Delete", portfolio_path(portfolio_item) , method: :delete, data: { confirm: 'Are you sure?' }, class: "btn btn-sm btn-outline-secondary" if logged_in?(:site_admin) %>
+        </div>
+        <small class="text-muted"><%= distance_of_time_in_words(portfolio_item.created_at, Time.now) %></small>
+      </div>
+    </div>
+  </div>
+</div>
