--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -1,13 +1,26 @@
-<!--Display only if image is false-->
-<%= image_tag @portfolio_item.main_image unless @portfolio_item.main_image.nil? %>
+<div class="container">
+  <div class="row">
+    <div class="col-md-7">
+      <!--Display only if image is false-->
+      <%= image_tag @portfolio_item.main_image unless @portfolio_item.main_image.nil? %>
+    </div>
 
-<h1><%= @portfolio_item.title %></h1>
-<!--For testing purposes. Display data in the variable-->
-<p><%= @portfolio_item.inspect %></p>
-<p><%= @portfolio_item.subtitle %></p>
-<p><%= @portfolio_item.body %></p>
+    <div class="col-md-5">
+      <h1><%= @portfolio_item.title %></h1>
 
-<h2>Technologies Used:</h2>
-<% @portfolio_item.technologies.each do |t| %>
-  <p><%= t.name %></p>
-<% end %>
+      <hr>
+
+      <p><%= @portfolio_item.subtitle %></p>
+      <p><%= @portfolio_item.body %></p>
+
+      <hr>
+
+      <h3>Technologies Used:</h3>
+
+      <% @portfolio_item.technologies.each do |t| %>
+        <p><%= t.name %></p>
+      <% end %>
+
+    </div>
+  </div>
+</div>
