Updated form styles for portfolios

--- a/app/views/layouts/portfolio.html.erb
+++ b/app/views/layouts/portfolio.html.erb
@@ -18,7 +18,7 @@
 
     <main role="main">
     
-    <%= render 'shared/portfolio_masthead' %>
+    <%= render 'shared/portfolio_masthead' unless logged_in?(:site_admin) %>
     
     <%= yield %>
 
