--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,29 +1,39 @@
 <%= form_for(@portfolio_item) do |form| %>
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
+  <div class="row">
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :title %>
+        <%= form.text_field :title, class: "form-control" %>
+      </div>
 
-  <div class="field">
-    <%= form.label :subtitle %>
-    <%= form.text_area :subtitle %>
-  </div>
+      <div class="form-group">
+        <%= form.label :subtitle %>
+        <%= form.text_field :subtitle, class: "form-control" %>
+      </div>
+    </div>
 
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
-  </div>
+    <div class="col-md-6">
+      <div class="form-group">
+        <%= form.label :body %>
+        <%= form.text_area :body, class: "form-control", rows:  13 %>
+      </div>
+    </div>
 
-  <ul>
-    <%= form.fields_for :technologies do |tech_form| %>
-      <li>
-        <%= tech_form.label :name %>
-        <%= tech_form.text_field :name %>    
-      </li>
-    <% end %>
-  </ul>
+    <div class="col-md-12">
+      <h2>Technologies Used:</h2>
 
-  <div class="actions">
-    <%= form.submit %>
+      <div>
+        <%= form.fields_for :technologies do |tech_form| %>
+          <div class="form-group">
+            <%= tech_form.label :name %>
+            <%= tech_form.text_field :name, class: "form-control" %>    
+          </div>
+        <% end %>
+      </div>
+
+      <div class="form-group">
+        <%= form.submit "Save Portfolio Item", class: "btn btn-primary btn-block" %>
+      </div>
+    </div>
   </div>
 <% end %>
