--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,14 +1,20 @@
-<h1>Lets Work Together</h1>
+<h1>Would you like to work together?</h1>
 
-<h3>Address</h3>
-<p>123 lololololol street</p>
+<div class="row">
+  <div class="col-md-6">
+    <h3>Address</h3>
+    <p>123 lololololol street</p>
 
-<h3>Phone</h3>
-<p><%= number_to_phone "1231231234"%></p>
+    <h3>Phone</h3>
+    <p><%= number_to_phone "1231231234"%></p>
 
-<h3>Email</h3>
-<p><a href="mailto:inquire@wrexshop.com?subject=Prospective Client" "email me">Email me</a></p>
+    <h3>Email</h3>
+    <p><a href="mailto:inquire@wrexshop.com?subject=Prospective Client" "email me">Email me</a></p>
+  </div>
 
-<div>
-  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14040.50785034354!2d-81.563874!3d28.385233!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa71e391fd01cf1a0!2sWalt+Disney+World+Resort!5e0!3m2!1sen!2sus!4v1529097580077" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <div class="col-md-6">
+    <div>
+      <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14040.50785034354!2d-81.563874!3d28.385233!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa71e391fd01cf1a0!2sWalt+Disney+World+Resort!5e0!3m2!1sen!2sus!4v1529097580077" width="400" height="250" frameborder="0" style="border:0" allowfullscreen></iframe>
+    </div>
+  </div>
 </div>
