--- a/app/views/portfolios/_portfolio_item.html.erb
+++ b/app/views/portfolios/_portfolio_item.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-4">
-  <div class="card mb-4 box-shadow">
+  <div class="card mb-4 box-shadow" data-id="<%= portfolio_item.id %>">
     <!--Display only if image is false-->
     <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
     <div class="card-body">
