Fixed application layout view. Added image to about me

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,12 +15,12 @@
   </head>
 
   <body class="text-center">
-    <div class="cover-container d-flex h-100 p-3 mx-auto flex-column">
-
+    <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <%= render "shared/application_nav" %>
         
-        <!--Views are passed in here.-->
-        <%= yield %>
+        <main role="main" class="inner cover">
+          <%= yield %>
+        </main>
 
         <%= render "shared/application_footer" %>
 
