--- a/app/views/shared/_application_nav.html.erb
+++ b/app/views/shared/_application_nav.html.erb
@@ -1,7 +1,9 @@
-<div class="inner">
-  <h3 class="masthead-brand">Justin Ramos</h3>
-  <nav class="nav nav-masthead justify-content-center app-nav">
-    <%= nav_helper 'nav-link', 'span' %>
-    <%= login_helper "nav-link" %>
-  </nav>
-</div>
+<header class="masthead mb-auto"> 
+  <div class="inner">
+    <h3 class="masthead-brand">Justin Ramos</h3>
+    <nav class="nav nav-masthead justify-content-center app-nav">
+      <%= nav_helper 'nav-link', 'span' %>
+      <%= login_helper "nav-link" %>
+    </nav>
+  </div>
+</header>
