--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,9 @@
 
   <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
+      
+        <div id="background"></div>
+
         <%= render "shared/application_nav" %>
         
         <main role="main" class="inner cover">
