--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,18 @@
 
   <body class="text-center">
     <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
-      
-        <div id="background"></div>
+        
+        <!--<div id="background"></div>-->
+
+        <%= video_tag(
+          'movie.mov',
+          id: 'background',
+          autoplay: true,
+          loop: true,
+          muted: true,
+          poster: 'home_bg.jpeg'
+          )
+          %>
 
         <%= render "shared/application_nav" %>
         
