--- a/app/views/portfolios/show.html.erb
+++ b/app/views/portfolios/show.html.erb
@@ -10,7 +10,8 @@
 
       <hr>
 
-      <p><%= @portfolio_item.subtitle %></p>
+      <em><%= @portfolio_item.subtitle %></em>
+
       <p><%= @portfolio_item.body %></p>
 
       <hr>
@@ -19,6 +20,13 @@
 
       <% @portfolio_item.technologies.each do |t| %>
         <p><%= t.name %></p>
+      <% end %>
+
+      <% if logged_in?(:site_admin) %>
+        <div>
+          <%= link_to "EDIT", edit_portfolio_path(@portfolio_item), 
+              class: "btn btn-warning" %>
+        </div>
       <% end %>
 
     </div>
