--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,21 +1,21 @@
-<%= form_for(@portfolio_item) do |form| %>
+<%= form_for(@portfolio_item) do |f| %>
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
-        <%= form.label :title %>
-        <%= form.text_field :title, class: "form-control" %>
+        <%= f.label :title %>
+        <%= f.text_field :title, class: "form-control" %>
       </div>
 
       <div class="form-group">
-        <%= form.label :subtitle %>
-        <%= form.text_field :subtitle, class: "form-control" %>
+        <%= f.label :subtitle %>
+        <%= f.text_field :subtitle, class: "form-control" %>
       </div>
     </div>
 
     <div class="col-md-6">
       <div class="form-group">
-        <%= form.label :body %>
-        <%= form.text_area :body, class: "form-control", rows:  13 %>
+        <%= f.label :body %>
+        <%= f.text_area :body, class: "form-control", rows:  13 %>
       </div>
     </div>
 
@@ -23,16 +23,19 @@
       <h2>Technologies Used:</h2>
 
       <div>
-        <%= form.fields_for :technologies do |tech_form| %>
+        <%= f.fields_for :technologies do |tech_form| %>
           <div class="form-group">
-            <%= tech_form.label :name %>
-            <%= tech_form.text_field :name, class: "form-control" %>    
+            <%= render 'technology_fields', f: tech_form %>
           </div>
         <% end %>
+        
+        <div>
+            <%= link_to_add_association 'Add Technology', f, :technologies %>
+        </div>
       </div>
 
       <div class="form-group">
-        <%= form.submit "Save Portfolio Item", class: "btn btn-primary btn-block" %>
+        <%= f.submit "Save Portfolio Item", class: "btn btn-primary btn-block" %>
       </div>
     </div>
   </div>
