--- a/app/views/portfolios/_form.html.erb
+++ b/app/views/portfolios/_form.html.erb
@@ -1,4 +1,11 @@
 <%= form_for(@portfolio_item) do |f| %>
+
+  <% if @portfolio_item.errors.any? %>
+    <% @portfolio_item.errors.full_messages.each do |e| %>
+      <%= js add_gritter(e, sticky: false, title: "ERROR") %>
+    <% end %>
+  <% end %>
+
   <div class="row">
     <div class="col-md-6">
       <div class="form-group">
