--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -1,4 +1,10 @@
 <%= form_with(model: blog, local: true) do |form| %>
+  <% if blog.errors.any? %>
+    <% blog.errors.full_messages.each do |e| %>
+      <%= js add_gritter(e, sticky: false, title: "ERROR") %>
+    <% end %>
+  <% end %>
+
   <div class="form-group">
     <%= form.text_field :title, class: 'form-control', placeholder: "Title" %>
   </div>
