--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,8 @@
 
         <%= render "shared/application_footer" %>
 
+        <%= render "shared/alerts" %>
+        
         <%= source_helper("application") %>
     </div>
   </body>  
